--- a/iframe.html
+++ b/iframe.html
@@ -7,10 +7,12 @@
         margin: 0;
       }
       .container {
-        position: relative;
-        width: 100%;
-        height: 0;
-        padding-bottom: 56.25%;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        overflow: hidden;
       }
       .video {
         position: absolute;
